--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-node-app",
+  "name": "coding-challenge",
   "version": "0.0.1",
   "description": "Coding Challenge",
   "main": "app.js",
@@ -8,12 +8,16 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/lcameroon/my-node-app.git"
+    "url": "https://github.com/lcameroon/coding-challenge.git"
   },
   "author": "Luis Cameroon",
   "license": "MIT",
   "dependencies": {
-    "restify": "^1.4",
+    "restify": "2.4.x",
     "json-easy-filter": "^0.3.0"
+  },
+  "engines": {
+    "node": "0.10.x",
+    "npm": "1.2.x"
   }
 }
